[project]
name = "bsutils"
version = "0.0.4"
authors = [{ name = "wangzhen0518", email = "wangzhen0518@126.com" }]
description = "A collection of basic python utilities."
readme = "README.md"
requires-python = ">=3.6"
dependencies = ["pyjson5"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/wangzhen0518/bsutils"
Issues = "https://github.com/wangzhen0518/bsutils/issues"

[tool.ruff]
line-length = 135

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
